--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     implementation 'com.github.QuadFlask:colorpicker:0.0.13'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3' //TODO delete!
+    //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
     /*testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'*/
